# MoriNoKomichi

./: .gitignore  CMakeLists.txt  README.md  drawWidget.cpp  drawWidget.h  graphics.cpp  graphics.h  main.cpp  mainwindow.ui  resources.qrc  taskloading.cpp  taskloading.h  window.cpp  window.h
docs/: DFDlv0.excalidraw  DFDlv1.excalidraw  DOCS.md  FlowCharts.excalidraw  Storyboard.excalidraw  StructureChart.excalidraw  TODO.md  UMLClassD.excalidraw  UseCaseD.excalidraw
sections/: helpoverlay.cpp  newoverlay.cpp  sections.cpp  sections.h  taskoverlay.cpp  tasksView.h  tasksview.cpp
sections/widgets/: bigtaskwidget.cpp  bigtaskwidget.h  drawtools.cpp  drawtools.h  graphicsviewcanvas.cpp  graphicsviewcanvas.h  inputwidget.cpp  inputwidget.h  playerviewwidget.cpp  playerviewwidget.h  sectionbgwidget.cpp  sectionbgwidget.h  svgbtnwidget.cpp  svgbtnwidget.h  taskwidget.cpp  taskwidget.h  todographicobject.cpp  todographicobject.h
sections/widgets/tools/: drawtools.cpp  drawtools.h  texttools.cpp  texttools.h
